# stm32

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  STM32L073RZTx_FLASH.ld  arm-gcc-toolchain.cmake  conanfile.py  fetch_dependencies.sh  linker.ld  memory.ld
inc/: main.h  stm32l0xx_hal_conf.h  stm32l0xx_it.h
include/: basic-timer.hpp  bit-field.hpp  clock.hpp  config.hpp  constants.hpp  dac.hpp  dma.hpp  gpio.hpp  interrupt-table.hpp  lora.hpp  peripheral-utils.hpp  register.hpp  spi.hpp  super-loop.hpp  uart.hpp  usart.hpp
include/peripherals/: dma.hpp  gpio.hpp  rcc.hpp
src/: init-system.cpp  init.cpp  main.c  main.cpp  startup_stm32l073xx.s  system_init.c
